--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "test": "test",
+    "install-global" : "npm link",
     "start-branch" : "node ./src/git/start-branch.js",
     "commit-branch" : "node ./src/git/commit-branch.js",
     "clean-branch" : "node ./src/git/clean-branch.js",
