--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "commander" : "1.*.*",
     "request" : "latest",
     "shelljs" : "0.3.*",
+    "flat-file-db" : "0.1.3",
+    "memoria" : "0.1.*",
     "yo" : "1.2.*",
     "node-generator" : "0.0.*",
     "generator-angular" : "*",
