--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "shelljs" : "0.3.*",
     "flat-file-db" : "0.1.3",
     "memoria" : "0.1.*",
+    "zombie" : "1.4",
+    "tough-cookie" : "0.12.1",
     "yo" : "1.2.*",
     "node-generator" : "0.0.*",
     "generator-angular" : "*",
