removed extra deps

--- a/package.json
+++ b/package.json
@@ -56,25 +56,7 @@
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-uglify": "~0.5.0",
     "commander" : "1.*.*",
-    "request" : "latest",
-    "shelljs" : "0.3.*",
-    "flat-file-db" : "0.1.3",
-    "memoria" : "0.1.*",
-    "zombie" : "1.4",
-    "tough-cookie" : "0.12.1",
-    "yo" : "1.1.2",
-    "node-generator" : "0.0.*",
-    "generator-angular" : "*",
-    "generator-backbone" : "*",
-    "generator-chrome-extension" : "*",
-    "generator-webapp" : "*",
-    "generator-mocha" : "*",
-    "generator-mobile" : "*",
-    "generator-gruntfile" : "*",
-    "generator-gruntplugin" : "*",
-    "generator-commonjs" : "*",
-    "generator-chromeapp" : "*",
-    "generator-generator" : "*"
+    "request" : "latest"
   },
   "devDependencies": {
     "mocha": "latest",
