--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "grunt-contrib-qunit": "~0.5.2",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-uglify": "~0.5.0",
+    "grunt-browserify" : "*",
     "commander" : "1.*.*",
-    "request" : "latest"
+    "request" : "latest",
+    "browserify" : "*"
   },
   "devDependencies": {
     "mocha": "latest",
